Unicode support added

--- a/template.htm
+++ b/template.htm
@@ -45,6 +45,7 @@
             {{ show.season }}<br/>
             {{ show.episode_no }}<br/>
             {{ show.date }}<br/>
+            {{ show.name }}<br/>
             </div>
             {% endif %}
         {% endfor %}
