--- a/template.htm
+++ b/template.htm
@@ -2,7 +2,7 @@
 <html xmlns="http://www.w3.org/1999/xhtml" xml:lang="en" lang="en">
 <head>
     <meta http-equiv="Content-Type" content="text/html; charset=UTF-8" />
-    <link rel="Stylesheet" type="text/css" href="files/style/main.css"></link>
+    <link rel="stylesheet" type="text/css" href="files/style/main.css"></link>
     <title>When Will It Air?</title>
 </head>
 <body>
