--- a/addshows.htm
+++ b/addshows.htm
@@ -3,7 +3,7 @@
 <head> 
     <meta http-equiv="Content-Type" content="text/html; charset=UTF-8" />
     <title>When Will It Air? - Add More Shows</title>  
-    <link rel="stylesheet" href="files/style/addshows.css" type="text/css" /> 
+    <link rel="stylesheet" href="http://localhost/wwia/files/style/addshows.css" type="text/css" /> 
 </head> 
  
 <body>
@@ -22,6 +22,7 @@
     </div> 
     {% endfor %}
     {% endfor %} 
+    <div class="showclear"></div>
     </div> 
     
     <div> 
