--- a/addshows.htm
+++ b/addshows.htm
@@ -16,7 +16,7 @@
     {% for show in letter.contents %}
     <div id="check{{ show.id }}" class="checkedletter">
         <label class="{{ 'checked' if show.checked else 'unchecked' }}">
-        <input class="checkbox" type="checkbox" name="selected_shows" value="{{ show.id }}" checked="{{ 'checked' if show.checked else 'unchecked' }}" />
+        <input class="checkbox" type="checkbox" name="selected_shows" value="{{ show.id }}" {{ 'checked="checked"' if show.checked }} />
         {{ show.name }}
         </label> 
     </div> 
@@ -29,5 +29,6 @@
         <input type="submit" name="filter" value="Save Filter" class="searchbutton" /><br />
     </div> 
     </form> 
+    <script language="Javascript" type="text/javascript" src="http://localhost/wwia/files/js/jquery-1.4.1.js"></script> 
 </body> 
 </html>
