Changed form action to use absolute URL

--- a/addshows.htm
+++ b/addshows.htm
@@ -8,7 +8,7 @@
  
 <body>
     <h1>Add More Shows</h1>
-    <form action="./add.py/show" method="post">
+    <form action="http://localhost/wwia/add.py/save" method="post">
     <div class="showselectbody"> 
     {% for letter in tvshowsdata %} 
     <div class="showclear"></div>
